--- a/attributes/style.css
+++ b/attributes/style.css
@@ -1,6 +1,10 @@
 h1 {
-    color:aliceblue;
+    color: black;
+    font-family: 'Playfair Display', serif;
+    font-weight: bold;
+    
 }
- body{
-     background-color: red;
- }
+p{
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+}
