--- a/attributes/style.css
+++ b/attributes/style.css
@@ -1,10 +1,57 @@
-h1 {
+:root {
+    --branding-color: #6C63FF;
+    --secondary-color:#F9F7FE;
+    --heading-font-family: 'Playfair Display', serif;
+    --default-font-family: 'Poppins', sans-serif;
+}
+
+body {
+    font-family: var(--default-font-family);
+}
+
+
+h1, h2, h3, h4,h5,h6 {
     color: black;
-    font-family: 'Playfair Display', serif;
+    font-family: var(--heading-font-family);
     font-weight: bold;
     
 }
-p{
-    font-family: 'Poppins', sans-serif;
+
+h1 {
+    font-size: 96px;
+}
+p {
+    font-family: var(--default-font-family);
     font-weight: normal;
+}
+
+.hero {
+    background: var(--secondary-color);
+    text-align: center;
+    padding: 160px 0;
+}
+
+.hero p {
+
+font-size: 36px;
+font-weight: bold;
+
+}
+
+.hero h2 {
+font-family: var(--default-font-family);
+font-weight: normal;
+font-size: 24px;
+line-height: 2;
+
+}
+
+.btn-branding {
+background: var(--branding-color);
+border-radius: 4px;
+color: white;
+font-size: 18px;
+line-height: 27px;
+padding: 18px 30px;
+
 }
