--- a/attributes/style.css
+++ b/attributes/style.css
@@ -1,57 +1,75 @@
 :root {
-    --branding-color: #6C63FF;
-    --secondary-color:#F9F7FE;
-    --heading-font-family: 'Playfair Display', serif;
-    --default-font-family: 'Poppins', sans-serif;
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
 }
 
 body {
-    font-family: var(--default-font-family);
+  font-family: var(--default-font-family);
 }
 
-
-h1, h2, h3, h4,h5,h6 {
-    color: black;
-    font-family: var(--heading-font-family);
-    font-weight: bold;
-    
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+  font-family: var(--heading-font-family);
+  font-weight: bold;
 }
 
 h1 {
-    font-size: 96px;
+  font-size: 96px;
+}
+
+h2 {
+  font-size: 64px;
 }
 p {
-    font-family: var(--default-font-family);
-    font-weight: normal;
+  font-family: var(--default-font-family);
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 
 .hero {
-    background: var(--secondary-color);
-    text-align: center;
-    padding: 160px 0;
+  background: var(--secondary-color);
+  text-align: center;
+  padding: 160px 0;
 }
 
 .hero p {
-
-font-size: 36px;
-font-weight: bold;
-
+  font-size: 36px;
+  font-weight: bold;
 }
 
 .hero h2 {
-font-family: var(--default-font-family);
-font-weight: normal;
-font-size: 24px;
-line-height: 2;
-
+  font-family: var(--default-font-family);
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
 }
 
 .btn-branding {
-background: var(--branding-color);
-border-radius: 4px;
-color: white;
-font-size: 18px;
-line-height: 27px;
-padding: 18px 30px;
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 18px 30px;
+}
 
+.btn-branding-outline {
+  border-radius: 4px;
+  color: var(--branding-color);
+  font-size: 18px;
+  line-height: 27px;
+  padding: 18px 30px;
+  border: 1px solid var(--branding-color);
+}
+
+.project-description {
+  padding: 120px 60px;
 }
