--- a/attributes/style.css
+++ b/attributes/style.css
@@ -73,3 +73,21 @@ p {
 .project-description {
   padding: 120px 60px;
 }
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+}
