Created the about page

--- a/attributes/style.css
+++ b/attributes/style.css
@@ -37,7 +37,7 @@ p {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 0;
+  padding: 160px 20px;
 }
 
 .hero p {
@@ -51,7 +51,25 @@ p {
   font-size: 24px;
   line-height: 2;
 }
+.about-section {
+  padding: 160px 20px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 1.2;
+}
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
 
+.about-section p {
+  font-size: 16px;
+}
+
+.about-section-content {
+  margin: 30px;
+}
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
@@ -85,6 +103,11 @@ p {
   }
   .hero {
     padding: 80px 20px;
+  }
+
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
   .project-description {
     padding: 0;
