--- a/attributes/style.css
+++ b/attributes/style.css
@@ -51,24 +51,34 @@ p {
   font-size: 24px;
   line-height: 2;
 }
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
-.about-section h1 {
+.content-container h1 {
   font-size: 64px;
   line-height: 1.2;
 }
-.about-section h2 {
+.content-container h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
 
-.about-section p {
+.content-container p {
   font-size: 16px;
 }
 
-.about-section-content {
+.content-container h3 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+  line-height: 2;
+}
+
+.content {
   margin: 30px;
+}
+
+.content h1 {
+  font-size: 64px;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -105,7 +115,7 @@ p {
     padding: 80px 20px;
   }
 
-  .about-section {
+  .content-container {
     text-align: center;
     padding: 0;
   }
