--- a/attributes/style.css
+++ b/attributes/style.css
@@ -124,3 +124,31 @@ p {
     text-align: center;
   }
 }
+
+.logo {
+  max-width: 150px;
+}
+nav {
+  padding: 20px 0;
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 10px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #272142;
+}
+
+nav a:hover {
+  color: var(--branding-color);
+  transition: all 150ms ease-in-out;
+}
